# arqix

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  RELEASING.md  REUSE.toml  arqix.toml  justfile  zensical.toml
.github/ISSUE_TEMPLATE/: task-from-handoff.md
.github/PULL_REQUEST_TEMPLATE/: implementation.md
.github/workflows/: ci.yml  diagrams.yml  pages.yml  release.yml
docs/: index.md
docs/blog/: 2026-03-20-why-arqix-had-to-exist.md  2026-03-why-arqix-had-to-exist.md
docs/en/: getting-started.md  index.md  why-arqix.md
docs/experiments/: README.md  Setting Up the Repository.md
docs/notes/: README.md
docs/ontology/: index.md
docs/pandoc/: defaults.yaml  header.tex  svg-to-png.lua
docs/personas/: PER-0001.md  PER-0002.md  PER-0003.md  PER-0004.md  PER-0005.md  PER-0006.md  PER-0007.md  PER-0008.md
docs/plans/: README.md
docs/processes/: copilot-codex-workflow.md  persona_us_req_mapping_report.md  us_renames_preview.json
docs/project/: ai-transparency.md  index.md  license.md  (+6 more)
proptest-regressions/: assembler.txt
scripts/: arqix  arqix_report.py  arqix_trace.py  check_conformance.py  check_frontmatter.py  check_requirements.py  check_trace_markers.py  pandoc-docker.sh  pandoc-image.env  render_pdf.sh  render_views.sh
site/: CNAME  index.html
sources/: markdownlint-rules.md  rfc4180.txt
src/: assembler.rs  config.rs  date.rs  derivation.rs  diag.rs  linter.rs  main.rs  markdown.rs  mcp.rs  modules.rs  parser.rs  policy.rs  publisher.rs  reporter.rs  rewriter.rs  sha256.rs  store.rs  templates.rs  trace.rs  util.rs  verifier.rs
tests/: cli.rs  cli_assemble.rs  cli_config.rs  cli_doc.rs  cli_finalise.rs  cli_fmt.rs  cli_lint.rs  cli_lint_derivation.rs  cli_lint_frontmatter.rs  cli_lint_requirements.rs  cli_mcp.rs  cli_policy.rs  cli_publish.rs  cli_quality.rs  cli_ratchet.rs  cli_report.rs  cli_trace.rs  cli_trace_freshness.rs  cli_trace_markers.rs  cli_trace_results.rs  cli_unit.rs  cli_verify.rs  corpus_guards.rs  prop_assemble.rs  render_config.rs
(+1014 files in other folders)
