[package]
name = "arqix"
version = "0.1.0"
edition = "2024"
description = "A Rust CLI for structured technical documentation and Architecture-as-Code workflows"
license = "GPL-3.0-or-later"
repository = "https://github.com/HenryCFnord/arqix"
keywords = ["documentation", "markdown", "architecture", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "arqix"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
