[package]
name = "arqix"
version = "0.1.0"
edition = "2024"
authors = ["Hendrik Oppenberg (HenryCFnord)"]
description = "A Rust CLI for structured technical documentation and Architecture-as-Code workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HenryCFnord/arqix"
keywords = ["documentation", "markdown", "architecture", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "arqix"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
toml = "1.1.2"

[dev-dependencies]
serde_json = "1.0.150"
